[gd_scene load_steps=5 format=3 uid="uid://shapematchgame"]

[ext_resource type="Script" path="res://scripts/ShapeMatchGame.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/textures/games/shape_match/bg_shape_match_1080x1920.png" id="2_bg"]
[ext_resource type="Texture2D" path="res://assets/textures/games/shape_match/tile_silhouette_512.png" id="3_sil"]
[ext_resource type="Texture2D" path="res://assets/textures/games/shape_match/tile_option_256.png" id="4_tile"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(100, 100)

[node name="ShapeMatchGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BackgroundFallback" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(1, 1, 1, 1)

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="GameContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="GameContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(56, 56)
text = "<"

[node name="ObjectiveLabel" type="Label" parent="GameContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 3
clip_text = true
theme_type_variation = &"HeaderSmall"
text = ""
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(110, 0)
size_flags_horizontal = 0
horizontal_alignment = 2
theme_type_variation = &"HeaderSmall"
text = ""
vertical_alignment = 1

[node name="WayangMascot" type="AnimatedSprite2D" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(60, 60)

[node name="GameContent" type="Control" parent="GameContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SilhouetteContainer" type="CenterContainer" parent="GameContainer/GameContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2

[node name="SilhouettePlaceholder" type="TextureRect" parent="GameContainer/GameContent/SilhouetteContainer"]
layout_mode = 2
custom_minimum_size = Vector2(220, 220)
texture = ExtResource("3_sil")
expand_mode = 1
stretch_mode = 6
modulate = Color(0.7, 0.75, 0.9, 1)

[node name="SilhouetteArea" type="Area2D" parent="GameContainer/GameContent/SilhouetteContainer/SilhouettePlaceholder"]
position = Vector2(110, 110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/GameContent/SilhouetteContainer/SilhouettePlaceholder/SilhouetteArea"]
shape = SubResource("RectangleShape2D_1")

[node name="OptionsContainer" type="HBoxContainer" parent="GameContainer/GameContent"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -160.0
offset_right = 160.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Option1" type="Control" parent="GameContainer/GameContent/OptionsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)

[node name="Tile" type="TextureRect" parent="GameContainer/GameContent/OptionsContainer/Option1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("4_tile")
expand_mode = 1
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="GameContainer/GameContent/OptionsContainer/Option1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -26.0
offset_right = 26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="ShapeArea" type="Area2D" parent="GameContainer/GameContent/OptionsContainer/Option1"]
position = Vector2(40, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/GameContent/OptionsContainer/Option1/ShapeArea"]
shape = SubResource("RectangleShape2D_1")

[node name="Option2" type="Control" parent="GameContainer/GameContent/OptionsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)

[node name="Tile" type="TextureRect" parent="GameContainer/GameContent/OptionsContainer/Option2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("4_tile")
expand_mode = 1
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="GameContainer/GameContent/OptionsContainer/Option2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -26.0
offset_right = 26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="ShapeArea" type="Area2D" parent="GameContainer/GameContent/OptionsContainer/Option2"]
position = Vector2(40, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/GameContent/OptionsContainer/Option2/ShapeArea"]
shape = SubResource("RectangleShape2D_1")

[node name="Option3" type="Control" parent="GameContainer/GameContent/OptionsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)

[node name="Tile" type="TextureRect" parent="GameContainer/GameContent/OptionsContainer/Option3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("4_tile")
expand_mode = 1
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="GameContainer/GameContent/OptionsContainer/Option3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -26.0
offset_right = 26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="ShapeArea" type="Area2D" parent="GameContainer/GameContent/OptionsContainer/Option3"]
position = Vector2(40, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/GameContent/OptionsContainer/Option3/ShapeArea"]
shape = SubResource("RectangleShape2D_1")

[node name="Option4" type="Control" parent="GameContainer/GameContent/OptionsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)

[node name="Tile" type="TextureRect" parent="GameContainer/GameContent/OptionsContainer/Option4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("4_tile")
expand_mode = 1
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="GameContainer/GameContent/OptionsContainer/Option4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -26.0
offset_right = 26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="ShapeArea" type="Area2D" parent="GameContainer/GameContent/OptionsContainer/Option4"]
position = Vector2(40, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameContainer/GameContent/OptionsContainer/Option4/ShapeArea"]
shape = SubResource("RectangleShape2D_1")
